[workspace]
resolver = "2"
members = ["crates/*"]


[workspace.package]
name = "kurtex"
version = "0.1.0"
edition = "2021"
build = "build.rs"
repository = "https://github.com/kurtexdev/kurtex"

[workspace.dependencies]
clap = { version = "4.5.13", features = ["derive"] }
deno_ast = { version = "0.41.2", features = ["transpiling"] }
deno_core = { version = "0.303.0" }
reqwest = { version = "0.12.5" }
tokio = { version = "1.39.2", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.121" }
globwalk = { version = "0.9.1" }
mut-rc = { version = "0.1.2" }
hashbrown = { version = "0.14.5" }
anyhow = { version = "1.0.86" }
jsonc-parser = "0.23.0"

[profile.dev]
codegen-units = 16
debug         = 2
incremental   = true
panic         = "abort"

[profile.release]
codegen-units = 1
debug         = false
lto       = "thin"
opt-level = 3
panic     = "abort"
strip     = true

[profile.release-prod]
inherits = "release"
lto = "fat"
