[workspace]
resolver = "2"
members = ["crates/*"]


[workspace.package]
version = "0.1.0"
license = "MIT"
edition = "2021"
repository = "https://github.com/kurtexdev/kurtex"

[workspace.dependencies]
deno_ast = { version = "0.41.2", features = ["transpiling"] }
deno_core = { version = "0.303.0" }
reqwest = { version = "0.12.5" }
tokio = { version = "1.39.2", features = ["full", "tracing"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.121" }
rccell = "0.1.3"
tokio-stream = "0.1.15"
nu-ansi-term = "=0.50.1"
log = "0.4.22"

hashbrown = { version = "0.14.5", features = ["rayon"] }
anyhow = { version = "1.0.86" }

# Local dependencies
kurtex_core = { path = "crates/kurtex_core" }
kurtex_cli = { path = "crates/kurtex_cli" }
kurtex_bindings = { path = "crates/kurtex_binding" }

[profile.dev]
codegen-units = 16
debug         = 2
incremental   = true
panic         = "abort"

[profile.release]
codegen-units = 1
debug         = false
lto       = "thin"
opt-level = 3
panic     = "abort"
strip     = true

[profile.release-prod]
inherits = "release"
lto = "fat"
