[package]
name = "kurtex_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ktx"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

tokio.workspace = true
anyhow.workspace = true
deno_core.workspace = true
log.workspace = true
nu-ansi-term.workspace = true

kurtex_core = { path = "../kurtex_core" }


[build-dependencies]
deno_core.workspace = true
once_cell = "1.19.0"

swc_common = "0.36.2"
swc_ecma_codegen = "0.154.4"
swc_ecma_parser = "0.148.1"
swc_ecma_transforms_base = "0.143.3"
swc_ecma_transforms_module = "0.186.3"
swc_ecma_transforms_typescript = "0.194.3"
swc_ecma_visit = "0.103.3"

kurtex_core = { path = "../kurtex_core" }

