[package]
name = "kurtex_core"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
globwalk = { version = "0.9.1" }

deno_ast.workspace = true
deno_core.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
hashbrown.workspace = true
anyhow.workspace = true
rccell.workspace = true
tokio-stream.workspace = true
rayon = "1.10.0"
static_assertions = "1.1.0"
log.workspace = true
nu-ansi-term.workspace = true

# Local dependencies
kurtex_binding = { path = "../kurtex_binding" }
